koodi ennen integratiotestejä

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "watch": "node_modules/.bin/nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development node index.js",
+    "watch": "NODE_ENV=development node_modules/.bin/nodemon index.js",
+    "test": "NODE_ENV=test node_modules/.bin/jest --verbose test"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "npm": "^5.6.0"
   },
   "devDependencies": {
+    "jest": "^22.0.4",
     "nodemon": "^1.13.3"
   }
 }
