--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "jest": "^22.0.4",
-    "nodemon": "^1.13.3"
+    "nodemon": "^1.13.3",
+    "supertest": "^3.0.0"
   }
 }
